--- a/index.html
+++ b/index.html
@@ -38,8 +38,23 @@
         </nav>
     </header>
 
-    <section class="apresenta">
-
+    <section class="apresentacao">
+        <div class="flex-container">
+            <div class="flexcontainerinfos">
+                <h1>Olá, meu nome é GADKASDKASODKASOKD</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam magnam magni illo doloremque reprehenderit 
+                obcaecati aliquam cum quasi vitae voluptatum numquam, recusandae eaque eligendi distinctio omnis saepe, et 
+                dolores consequatur?</p>
+            <div class="links">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+            </div>
+            </div>
+            <div>
+                <img class="perfil" src="" alt="">
+            </div>
+        </div>
     </section>
 
 </body>
