--- a/index.html
+++ b/index.html
@@ -40,21 +40,32 @@
 
     <section class="apresentacao">
         <div class="flex-container">
-            <div class="flexcontainerinfos">
-                <h1>Olá, meu nome é GADKASDKASODKASOKD</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam magnam magni illo doloremque reprehenderit 
-                obcaecati aliquam cum quasi vitae voluptatum numquam, recusandae eaque eligendi distinctio omnis saepe, et 
-                dolores consequatur?</p>
-            <div class="links">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+            <div class="flex-container-infos">
+                <h3>Olá, meu nome é <strong class="fundo-nome">José Augusto</strong></h3>
+                <h1>Eu sou um &lt;Desenvolvedor&gt;</h1>
+                <p>Estou no terceiro semestre do curso de Análise e Desenvolvimento de Sistemas e sou Técnico em Informática formado 
+                    pelo Firjan SENAI. Desde o ensino médio, sempre busquei variadas oportunidades extracurriculares, como um curso de Computação 
+                    em Nuvem com AWS, oferecido pela Escola da Nuvem, e diversos bootcamps e cursos online para meu 
+                    aperfeiçoamento profissional. <br>
+                    Essas experiências moldaram quem sou hoje, transformando-me em uma pessoa mais comunicativa, adaptável e 
+                    aberta a críticas. Tive a oportunidade de colaborar com organizações incríveis, como a Firjan, a UNISUAM e a 
+                    Escola da Nuvem, onde conquistei, com muito esforço, espaço para meu progresso educacional. No entanto, sou 
+                    ambicioso e sei que essas não serão as últimas instituições onde deixarei minha marca.
+                    </p>
+                <div class="links">
+                    <a target="_blank" href="https://www.linkedin.com/in/josearsantos/"><img class="logo-info" src="img/linkedin.png" alt="Logo Linkedin"></a>
+                    <a target="_blank" href="https://github.com/joseaugustoR"><img class="logo-info" src="img/github.png" alt="Logo GitHub"></a>
+                    <a target="_blank" href="https://api.whatsapp.com/send?phone=5521979419567&text=Ol%C3%A1,%20Tudo%20bem?"><img class="logo-info" src="img/whatsapp.png" alt="Logo whatsapp"></a>
+                </div>
             </div>
-            </div>
-            <div>
-                <img class="perfil" src="" alt="">
+            <div class="perfil">
+                <img class="perfil" src="img/perfil.jpg" alt="Foto de José Augusto">
             </div>
         </div>
+    </section>
+
+    <section class="habilidades">
+
     </section>
 
 </body>
