--- a/index.html
+++ b/index.html
@@ -69,44 +69,47 @@
     </section>
 
     <section class="habilidades">
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="Projetos">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="img/moviein.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Movie-in</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="tecnologias-utilizadas">Tecnologias Utilizadas:</h5>
+                  <div class="links-tecnologias">
+                        <a target="_blank" href="https://www.linkedin.com/in/josearsantos/"><img class="logo-tecnologia-card" src="img/linkedin.png" alt="Logo Linkedin"></a>
+                        <a target="_blank" href="https://github.com/joseaugustoR"><img class="logo-tecnologia-card" src="img/github.png" alt="Logo GitHub"></a>
+                        <a target="_blank" href="https://api.whatsapp.com/send?phone=5521979419567&text=Ol%C3%A1,%20Tudo%20bem?"><img class="logo-tecnologia-card" src="img/whatsapp.png" alt="Logo whatsapp"></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/josearsantos/"><img class="logo-tecnologia-card" src="img/linkedin.png" alt="Logo Linkedin"></a>
+                    </div>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="img/duo.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="img/unite.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="#" class="btn btn-outline-secondary">Go somewhere</a>
                 </div>
               </div>
             </div>
           </div>
+        </div>
     </section>
 
 </body>
