--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#" class="logo">Trecko</a>
         </div>
         <nav class="navbar">
-            <a href="#">Sobre mim</a>
+            <a href="">Sobre mim</a>
             <a href="#">Habilidades</a>
             <a href="#">Projetos</a>
             <a href="#">Contato</a>
