atts  - parte dos projetos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,17 +48,18 @@
                 <p>Estou no terceiro semestre do curso de Análise e Desenvolvimento de Sistemas e sou Técnico em Informática formado 
                     pelo Firjan SENAI. Desde o ensino médio, sempre busquei variadas oportunidades extracurriculares, como um curso de Computação 
                     em Nuvem com AWS, oferecido pela Escola da Nuvem, e diversos bootcamps e cursos online para meu 
-                    aperfeiçoamento profissional. <br>
+                    aperfeiçoamento profissional. 
                     Essas experiências moldaram quem sou hoje, transformando-me em uma pessoa mais comunicativa, adaptável e 
                     aberta a críticas. Tive a oportunidade de colaborar com organizações incríveis, como a Firjan, a UNISUAM e a 
                     Escola da Nuvem, onde conquistei, com muito esforço, espaço para meu progresso educacional. No entanto, sou 
                     ambicioso e sei que essas não serão as últimas instituições onde deixarei minha marca.
+                    <br>
                     </p>
                 <div class="links">
                     <a target="_blank" href="https://www.linkedin.com/in/josearsantos/"><img class="logo-info" src="img/linkedin.png" alt="Logo Linkedin"></a>
                     <a target="_blank" href="https://github.com/joseaugustoR"><img class="logo-info" src="img/github.png" alt="Logo GitHub"></a>
                     <a target="_blank" href="https://api.whatsapp.com/send?phone=5521979419567&text=Ol%C3%A1,%20Tudo%20bem?"><img class="logo-info" src="img/whatsapp.png" alt="Logo whatsapp"></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/josearsantos/"><img class="logo-info" id="curriculo" src="img/linkedin.png" alt="Logo Linkedin"></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/josearsantos/"><img class="logo-info" id="curriculo" src="img/download-curriculo.png" alt="Logo Linkedin"></a>
                 </div>
             </div>
             <div class="perfil">
@@ -71,42 +71,74 @@
     <section class="habilidades">
     <div class="Projetos">
         <div class="row row-cols-1 row-cols-md-3 g-4">
+
             <div class="col">
               <div class="card">
                 <img src="img/moviein.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Movie-in</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Moviein é um projeto da faculdade para streaming de filmes e vídeos independentes. Para que esse 
+                    projeto seja realizado, necessitava de uma estrutura e montagem dos projetos Backend e Frontend, além 
+                    da construção do modelo e elaboração do Banco de dados.
+                  </p>
                     <h5 class="tecnologias-utilizadas">Tecnologias Utilizadas:</h5>
                   <div class="links-tecnologias">
-                        <a target="_blank" href="https://www.linkedin.com/in/josearsantos/"><img class="logo-tecnologia-card" src="img/linkedin.png" alt="Logo Linkedin"></a>
-                        <a target="_blank" href="https://github.com/joseaugustoR"><img class="logo-tecnologia-card" src="img/github.png" alt="Logo GitHub"></a>
-                        <a target="_blank" href="https://api.whatsapp.com/send?phone=5521979419567&text=Ol%C3%A1,%20Tudo%20bem?"><img class="logo-tecnologia-card" src="img/whatsapp.png" alt="Logo whatsapp"></a>
-                        <a target="_blank" href="https://www.linkedin.com/in/josearsantos/"><img class="logo-tecnologia-card" src="img/linkedin.png" alt="Logo Linkedin"></a>
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/react-logo.png" alt="Logo HTML"></a>
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/tailwind-logo.png" alt="Logo CSS"></a>
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/typescript-logo.png" alt="Logo TS"></a>
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/postgresql-logo.png" alt="Logo postgresql"></a>
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/aws-logo.jpg" alt="Logo AWS"></a>
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/node-logo.png" alt="Logo Node"></a>
                     </div>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+                    <a href="#" type="button" class="btn btn-outline-success">Acesse o projeto</a>
+                  </div>
               </div>
             </div>
+
             <div class="col">
               <div class="card">
                 <img src="img/duo.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+                  <h5 class="card-title">Duo Portfólio</h5>
+                  <p class="card-text">Duo foi um projeto acadêmico realizado com a Karollyne de Oliveira, consistindo em um site de
+                    em dupla. Sua estrutura é básica, tendo como principais tecnologias utilizadas o HTML, o CSS e o JavaScript.
+                    <br>
+                    <br>
+                    <br>
+                  </p>
+                    <h5 class="tecnologias-utilizadas">Tecnologias Utilizadas:</h5>
+                  <div class="links-tecnologias">
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/html-logo.png" alt="Logo HTML"></a>
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/css-logo.png" alt="Logo CSS"></a>
+                        <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/js-logo.png" alt="Logo TS"></a>
+                    </div>
+                    <a href="#" type="button" class="btn btn-outline-success">Acesse o projeto</a>
+                  </div>
               </div>
             </div>
+
             <div class="col">
               <div class="card">
                 <img src="img/unite.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-outline-secondary">Go somewhere</a>
+                  <h5 class="card-title">NLW Unite</h5>
+                  <p class="card-text">Projeto realizado durante a semana da NLW UNITE, disponibilizado pela rocketseat.
+                    Ele consiste em uma tabela de check-in de clientes, tendo a opção de adicionar ou remover.
+                    <br>
+                    <br>
+                    <br>
+                  </p>
+                    <h5 class="tecnologias-utilizadas">Tecnologias Utilizadas:</h5>
+                  <div class="links-tecnologias">
+                    <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/html-logo.png" alt="Logo HTML"></a>
+                    <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/css-logo.png" alt="Logo CSS"></a>
+                    <a target="_blank" href="#"><img class="logo-tecnologia-card" src="img/js-logo.png" alt="Logo TS"></a>
+                    </div>
+                    <a href="#" type="button" class="btn btn-outline-success">Acesse o projeto</a>
                 </div>
               </div>
+            </div>
+
             </div>
           </div>
         </div>
